Add UC1 implementation
