# backend/src/main/java/gov/mib/aims/backend/model/IncidentStatus.java
@@ -1,0 +1,10 @@
+package gov.mib.aims.backend.model;
+
+/**
+ * Статус инцидента.
+ */
+public enum IncidentStatus {
+
+    DRAFT,
+    READY_FOR_ANALYSIS
+}
